iter_language/tests/corpus/invalid/queue-sqs-missing-identity.iter
queue sqs {
  region = "us-east-1"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
